--- a/components/app-chart/app-chart.css
+++ b/components/app-chart/app-chart.css
@@ -1,9 +1,17 @@
 :host {
   display: block;
-  color: red;
 }
 
 polyfill-next-selector { content: ':host label'; }
 ::content app-labels {
   display: none;
+}
+
+#chart_container, #chartEl {
+  height: 100%;
+  width: calc(100% - 40px);
+}
+
+#chartEl {
+  margin-left: 40px;
 }
